--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    <p> Do something</p>
-
+    <div class="content-block">
+        <p> We are Food Play!!!</p>
+    </div>
 {% endblock %}
