--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    <p> Do something</p>
+    <h1 class="title">{{ blog.title }}</h1>
+    <div class="content-block">
+        {{ blog.content | safe }}
+    </div>
 
 {% endblock %}
