--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <p> Do something</p>
-
+    <div class="row">
+        {% for i in ele %}
+            <div class="col-sm-6">
+                <div class="card yy-card">
+                    <img src="{{ i }}"/>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
