--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,65 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <p> Do something</p>
+<div class="first_frame">
+<span>
+    <img  class="frame" src="/static/img/home/banner1.png">
+    <span>
+        <button type="button" class="home-shop-button">SHOP KITS</button>
+    </span>
+</span>
+</div>
+<div class="row">
+    <div class="col-sm-6">
 
+    <img src="/static/img/home/why.png" class="frame">
+    </div>
+    <div class="col-sm-6">
+    <img src="/static/img/home/pic1.png" class="frame">
+    </div>
+</div>
+<div class="">
+    <div class="frame">
+        <img class="frame" src="/static/img/home/pic2.png">
+    </div>
+</div>
+<div class="align-center">
+    <div class="container">
+        <h1>Sign up for DESSERT DECOR awesomeness!</h1>
+
+    </div>
+    <div class="container ">
+        <div class="middle-panel">
+            <input type="text" class="email-zone" placeholder="Email address">
+            <button type="button" class="btn-yy">Start</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-2 thumbnail">
+
+            <img src="/static/img/home/20.pic.png">
+        </div>
+        <div class="col-sm-2 thumbnail">
+
+            <img src="/static/img/home/19.pic.png">
+        </div>
+        <div class="col-sm-2 thumbnail">
+
+            <img src="/static/img/home/17.pic.png">
+        </div>
+        <div class="col-sm-2 thumbnail">
+
+            <img src="/static/img/home/31.pic.png">
+        </div>
+        <div class="col-sm-2 thumbnail">
+
+            <img src="/static/img/home/3.pic.png">
+        </div>
+        <div class="col-sm-1">
+
+        </div>
+    </div>
+</div>
 {% endblock %}
