--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,6 +1,145 @@
 {% extends 'base.html' %}
 {% block content %}
+    <div class="first_frame">
+        <span>
+            <img  class="frame non-padding" src="/static/img/kit%20list/pic1.png">
+        </span>
+    </div>
+    <div class="container yy-content align-center">
+        <div class="title-shop">
+            <h2> Creative Decoration Kits</h2>
+        </div>
 
-    <p> Do something</p>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/cheese-cake">
+                        <div class="thumbnail">
+                            <img src="/static/img/kit%20list/_DSC3843.png">
+                            <div class="caption">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Blueberry cheese cake decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <h1>$16</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/butter-cookie">
+                        <div class="thumbnail">
+                            <img src="/static/img/kit%20list/FullSizeRender%203%20copy.png">
+                            <div class="caption">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Icing butter cookies decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <h1>$8</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/holiday-cookie">
+                        <div class="thumbnail">
+                            <img src="/static/img/kit%20list/0001la.png">
+                            <div class="caption">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Holiday cookies decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <h1>$10</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/plant-cake">
+                        <div class="thumbnail">
+                            <img src="/static/img/kit%20list/IMG_6811.png">
+                            <div class="caption">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Plant cake decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <h1>$18</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/popcake">
+                        <div class="thumbnail">
+                            <img src="/static/img/kit%20list/2.pic%20copy.png">
+                            <div class="caption">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Popcake decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <h1>$8</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/Butter-koekje">
+                        <div class="thumbnail">
+                            <img src="/static/img/kit%20list/FullSizeRender%204.png">
+                            <div class="caption">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Butter Koekje decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <h1>$12</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 {% endblock %}
