--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     </span>
 </span>
 </div>
-<div class="row">
+<div class="row yy-content">
     <div class="col-sm-6">
 
     <img src="/static/img/home/why.png" class="frame">
@@ -23,7 +23,7 @@
         <img class="frame" src="/static/img/home/pic2.png">
     </div>
 </div>
-<div class="align-center">
+<div class="align-center yy-content">
     <div class="container">
         <h1>Sign up for DESSERT DECOR awesomeness!</h1>
 
