--- a/templates/cheese-cake.html
+++ b/templates/cheese-cake.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'production.html' %}
+{% block inner %}
 
-    <div class=" yy-content pad-container">
+    <div class=" pad-container">
 
     <div class="row">
         <div class="col-lg-8">
@@ -45,6 +45,62 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="row">
+        <div class="col-lg-7">
+
+            <div class="shop-detail">
+                <div class="thumbnail">
+                    <div class="purple">
+                        <div class="subtitle">
+                            <p>What's in the blue cheesecake decoration kit?</p>
+                        </div>
+                    </div>
+                    <div class="receipt">
+                    <img src="/static/img/cheese%20cake%20detail/Group.png" class="receipt">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-5">
+            <div class="shop-detail">
+                <div class="thumbnail">
+                    <img src="/static/img/cheese%20cake%20detail/_DSC3824%202.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="shop-detail wider">
+
+        <div class="thumbnail">
+            <img src="/static/img/cheese%20cake%20detail/pic1.png">
+        </div>
+    </div>
+
+
+    <div class="shop-detail wider">
+
+        <div class="thumbnail">
+            <img src="/static/img/cheese%20cake%20detail/pic2.png">
+        </div>
+    </div>
+
+
+    <div class="purple">
+        <div class="subtitle">
+            <p>How can I play with blueberry cheesecake decoration kit?</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-5">
+            <div class="thumbnail">
+                <img src="/static/img/cheese%20cake%20detail/_DSC3801.png">
+            </div>
+        </div>
     </div>
 
     </div>
